# scanner.cpp

./: BUILD.md  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.md  crc32c.c  winnowing.h  winnowing.i
bindings/swig/: scanoss.i
sdk/: scan_module.cpp  scan_module.hpp  sdk.cpp  sdk.hpp
sdk/include/api/: grpc.h  rest.h
src/: __init__.py  binding.gyp  binding.swig  binding_wrap.c  binding_wrap.cxx  example.cpp  example.i  example.java  example.py  exampleJNI.java  example_wrap.c  example_wrap.cxx  main.cpp  printer.py  setup.py  winnowing.c
src/cli/: commands.cpp  commands.h
src/core/: fingerprint.cpp  fingerprint.h
src/fingerprint/: content_source.hpp  file_source.cpp  file_source.hpp  string_source.cpp  string_source.hpp  string_source.test.cpp
src/printer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/sdk/: printer.cpp  printer.h
